2008-07-01  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/X11NotificationAreaBox.cs:
	Ignore the first size allocation since it's the default window size and
	causes the notification area to resize to a huge dimension until a new
	request is queued for the actual icon size (BGO #540885)

2008-06-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Library/ThreadPoolImportSource.cs:
	Fix NRE that totally broke the Amarok importer.

	* src/Core/Banshee.Services/Banshee.PlayerMigration/AmarokPlayerImportSource.cs:
	Improve the Amarok importer, including fixes for broken rating importing.
	Also, migrate the podcast subscriptions.

2008-06-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastFeedModel.cs:
	Sort podcasts by case-insensitive title.

	* src/Extensions/Banshee.Daap/Daap/Database.cs: Fix bug with not
	specifying what meta fields to return when fetching playlists (actually
	crashed new RB and got bad data from old RB).

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapService.cs: Proxy UI
	actions to the main loop, and don't flash new shares within 5 seconds of
	starting the locator.

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapSource.cs: Make Disconnect
	and Import actions insensitive unless connected.  Handle disconnecting
	while loading the tracks (BGO #526817).  When we disconnect, show the
	disconnected error view.  Proxy ui actions to main loop.  While loading
	tracks, reload fewer times for big collections.

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapPlaylistSource.cs: Proxy
	OnUpdated call to main.

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Listen for
	the active source's Updated event and UpdateActions when it is raised.

	* src/Core/Banshee.Services/Banshee.Web/Browser.cs: Fix typo in UserAgent
	string (no closing parenthesis.
